--- a/blog-detail.htm
+++ b/blog-detail.htm
@@ -6,9 +6,16 @@
 <!--
 	ucorpora by freshdesignweb.com
 	Twitter: https://twitter.com/freshdesignweb
-	https://www.freshdesignweb.com/ucorpora/
--->
+	https://www.freshdesignweb.com/ucorpora/-->
 <head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6573915389845665",
+    enable_page_level_ads: true
+  });
+</script>
+
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
   <title>Ucorpora Blog Detail</title>
