--- a/gallery.htm
+++ b/gallery.htm
@@ -9,6 +9,13 @@
 	https://www.freshdesignweb.com/ucorpora/
 -->
 <head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6573915389845665",
+    enable_page_level_ads: true
+  });
+</script>
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
   <title>Ucorpora Gallery</title>
