--- a/about-us.htm
+++ b/about-us.htm
@@ -20,7 +20,7 @@
   <meta charset="utf-8">
   <title>Ucorpora About US</title>
 	<meta name="description" content="ucorpora about us - Free Business Corporate HTML Template">
-	<meta name="keywords" content="ucorpora, ucorpora about, theme, template, corporate, clean, modern, bootstrap, creative, design">
+	<meta name="keywords" content="insurance, law, theme, template, corporate, clean, modern, bootstrap, creative, design">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--[if (gte IE 9)|!(IE)]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -119,9 +119,9 @@
       <div class="row">
         <div class="span12">
           <h4>Who We Are?</h4>
-          <p>Ucorpora ut molestie turpis, elementum tempor metus. Vestibulum non nibh porttitor, eleifend purus eu, pulvinar orci. Quisque a gravida lorem, eu lobortis magna. Nulla auctor urna quis facilisis pretium. Cras facilisis risus sed mauris gravida, id vestibulum erat dictum. Nam in ante massa. Integer ultricies libero lorem, egestas dictum augue aliquam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.</p>
+          <p>We are fully registered with CAC and our mission is to enlighten undergraduates and  youths(in general) on IT skills
 
-<p>Elementum tempor metus donec ut molestie turpis. Vestibulum non nibh porttitor, eleifend purus eu, pulvinar orci. Quisque a gravida lorem, eu lobortis magna. Nulla auctor urna quis facilisis pretium. Cras facilisis risus sed mauris gravida, id vestibulum erat dictum. Nam in ante massa. Integer ultricies libero lorem.</p>   
+Our skills include.</p>   
           <!-- Our Team -->      
           <h3>Our Team</h3>
                 
@@ -256,12 +256,14 @@
             <div class="span4"> 
               <h3>List</h3>
               <ul class="list-a">
-                <li>Le Aorem Ipsum ainsi obtenu ne seeng elit.</li>
-                <li>Contrairement à Lorem n'est aliquet mollis.</li>
-                <li>On sait depuis travailler cotà une opinion.</li>
-                <li>Al contrario di quaon enodio, quis fringilla.</li>
-                <li>Sopravvissuto non solo velor iaculis.</li>
-                <li>Sait depuis longtendue gravida porttitor.</li>
+                <li>We are fully registered with CAC and our mission is to enlighten undergraduates and  youths(in general) on IT skills
+
+Our skills include </li>
+                <li>great</li>
+                <li>effective.</li>
+                <li>efficiency</li>
+                <li>efficient.</li>
+                <li>Fast.</li>
               </ul>   
             </div>
             <!-- List End -->    
