--- a/services.htm
+++ b/services.htm
@@ -145,22 +145,22 @@
           <div class="ic-1"><i class="icon-lightbulb"></i></div>
           <div class="title-1"><h4>Powerful clean design</h4></div>
           <div class="text-1"> 
-            On sait depuis longake apple pie. Gingerbread cotton candy icing ice cream applicake wafetemps nnaire de plus de 200 mots pluskan rlatin
+            Very clean design that has been commended for years
           </div>
         </div>
         <div class="span4">
           <div class="ic-1"><i class="icon-resize-small"></i></div>
           <div class="title-1"><h4>Fully responsive</h4></div>
           <div class="text-1">         
-            Iil utilise un dictionnaire de plus de 200 mots kan rlarem as Ipsumtiotins, en combiake apple pie. Gingerbread icing ice cream applicake wafenaison.
-          </div>
+            Compatible with phones and laptops and all devices
+</div>
         </div>
         <div class="span4">
           <div class="ic-1"><i class="icon-eye-open"></i></div>
           <div class="title-1"><h4>Retina Ready</h4></div>
           <div class="text-1">
-            Contrairement à une opinion répandue, Lorem as Ipsumtionnaire de plus n'est pas simplake apple pie. Gingerbread cotton  ice cream applicake wafeement.
-          </div>
+              It's not harmful for eyes. Suitable for all eyes
+            </div>
         </div>    
       </div>   
       
@@ -199,8 +199,8 @@
               </div>
               <div id="collapseOne" class="accordion-body collapse in">
                 <div class="accordion-inner">
-                  Officia deserunt mollit anim id est laborum. Duis aute irure doloicies vehat a ante veere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Dlit ors vestibulum.
-                </div>
+                     Jesus loves you and He's coming soon
+                  </div>
               </div>
             </div>
             <div class="accordion-group">
@@ -211,8 +211,9 @@
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do. Chocolateon candy toffee topping lollipop. Eeiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in repreh adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
+                      Have u read your Bible today?
+                      God cares for you
+                  </div>
               </div>
             </div>
             <div class="accordion-group">
@@ -223,8 +224,8 @@
               </div>
               <div id="collapseThree" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Dolore magna aliqua. Duis aute irure dolor in repreh adipisicing elididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptaenderit in voluptaokie icing candy jelly oat cake chupa chups bear claw topping applicake. Cookie danish dessert pie. Marshmallow wypas dessert. Chocolate cake sweet cotton candy .
-                </div>
+                    For there is no condemnation for those that are in Christ Jesus
+                  </div>
               </div>
             </div>
           </div>
@@ -243,16 +244,16 @@
             <div class="tab-content">
               <div class="tab-pane active" id="tab1">
                 <h3>I'm in Section 1</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exeinim et.Pie wafer wypas candy canes toffee. Co adipisicing elit, lit in voluptah uveere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuerci tation ullamcorper susc nostrudexerci tation ullamcoramcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendinim veniam, quis nostrud exerci tation ullamcorper suscipit lobrerit in vul</p>
-              </div>
+                <p>God is light and there is no darkness in him</p>
+                  </div>
               <div class="tab-pane" id="tab2">
                 <h3>I'm in Section 2</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcinim veniam, quis nostrud exerci tation ullamcorper t lobortis nisl ut alisequat. Duis autem vel einim veniam, quis nostrud exerinim veniam, quis nostrud exerci tation ullamcorper suscipit lobci tation ullamcorper suscipit lobum iriure dolor in hendruis aute irure dolor in reprehenderit in voluptah ultricies vehat a ante veere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuerit in vul</p>
-              </div>
+                <p>For through Him we both have access by One Spirit to the father</p>
+                      </div>
               <div class="tab-pane" id="tab3">
                 <h3>I'm in Section 3</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea coiipit lobmmodo consequat. Duis autem vel eum iriure dolor in hendrerit in vinim veniam, quis nostrud einim veniam, quis nostrud exeruis aute irure dolor in reprehenderit in voluptah ultricies vehat a ante veere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuci tation ullamcorper suscipit lobxerci tation ullamcorper suscipit lobul</p>
-              </div>
+                <p>For If I still pleased men I would not be a bondservant if Chist</p>
+                           </div>
             </div>
           </div>
           <!-- Tabs End -->
