--- a/index.htm
+++ b/index.htm
@@ -110,8 +110,8 @@
        <div class="f-center">
               <h2>why choose us ?</h2>
               <div class="head-info">
-                Magna in pulvinar tempor montes pulvinar habitasse parturient? Elementum facilisis sit et, dolor placerat, turpis auctor. Lundium ultricies augue urna arcu aliquet velit?
-            </div>  
+                    A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</div>
        </div>
        <div class="f-hr"></div>
       <div class="row space40"></div>
@@ -126,8 +126,8 @@
               <div class="title-1"><h4>Powerful clean design</h4></div>
               <!-- Service Content --> 
               <div class="text-1"> 
-                On sait depuis longake apple pie. Gingerbread cotton candy icing ice cream applicake wafetemps nnaire de plus de 200 mots pluskan rlatin
-              </div>
+               A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH  told me the class has been cancelled for this morning</div>
             </div>
             <!-- Service Container End --> 
             <div class="span4">
@@ -141,8 +141,8 @@
               <div class="ic-1"><i class="icon-eye-open"></i></div>
               <div class="title-1"><h4>Retina Ready</h4></div>
               <div class="text-1">
-                Contrairement à une opinion répandue, Lorem as Ipsumtionnaire de plus n'est pas simplake apple pie. Gingerbread cotton  ice cream applicake wafeement.
-              </div>
+                  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</div>
             </div>    
           </div>   
         </div>   
