--- a/contact.htm
+++ b/contact.htm
@@ -132,31 +132,31 @@
             <div class="tab-content">
               <div class="tab-pane active" id="tab1">
                 <h3>I'm in Section 1</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exeinim et.Pie wafer wypas candy canes toffee. Co adipisicing elit, lit in voluptah uveere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuerci tation ullamcorper susc nostrudexerci tation ullamcoramcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendinim veniam, quis nostrud exerci tation ullamcorper suscipit lobrerit in vul</p>
-              </div>
+                <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+</div>
               <div class="tab-pane" id="tab2">
                 <h3>I'm in Section 2</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcinim veniam, quis nostrud exerci tation ullamcorper t lobortis nisl ut alisequat. Duis autem vel einim veniam, quis nostrud exerinim veniam, quis nostrud exerci tation ullamcorper suscipit lobci tation ullamcorper suscipit lobum iriure dolor in hendruis aute irure dolor in reprehenderit in voluptah ultricies vehat a ante veere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuerit in vul</p>
-              </div>
+                <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled  this morning</p>
+</div>
               <div class="tab-pane" id="tab3">
                 <h3>I'm in Section 3</h3>
-                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea coiipit lobmmodo consequat. Duis autem vel eum iriure dolor in hendrerit in vinim veniam, quis nostrud einim veniam, quis nostrud exeruis aute irure dolor in reprehenderit in voluptah ultricies vehat a ante veere velit aliquet.Pie wafer wypas candy canes toffee. Co adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Integer posuere erat a ante venenatis dapibus posuci tation ullamcorper suscipit lobxerci tation ullamcorper suscipit lobul</p>
-              </div>
+                <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+</div>
             </div>
           </div>
           <!-- Tabs End -->
         </div>
         <div class="span6">
           <h3>Content</h3>
-          <p>
-          Porta montes montes vel nunc cras porttitor mid elementum dictumst dignissim dapibus urna ac, enia, magna dictumst odio, a tincidunt rhoncus massa in in risus nunc augue pham? Aenean, urna, magna dictumst odio massa in in risus nunc augue phasellus mattis mid elementum dictumst dignissim dapibus urna ac, enim? 
-          </p><p>
-          Porttitor! Aenean, urna, magna dictumst odio, a tingue phasellus mattis mid elementum dictumst dignissim dapibucidunt rhoncus massa in in risus nunc augue phasellus mattis Aenean, urna, magna dictumst odio massa in in risus nunc augue phasellus mattis mid elementum dictumst dignissim dapibus.
-          </p><p>
-          Tingue phasellus mattis mid elementum dictumst dignissim dapibucidunt rhoncus massa in in risus nunc augue phasellus mattis Aenean, urna, magna dictumst odio massa in in risus nunc augue phasellus mattis mid elementum dictumst dignissim dapibus.
-          </p>
-        </div>        
-
+          
+        </div>   <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+     
+<p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
         <div class="row space40"></div> 
 
         <div class="span12">
