--- a/blog.htm
+++ b/blog.htm
@@ -171,9 +171,8 @@
                     <div class="blue-dark">
                     <i class="icon-user"></i> By Admin <i class="icon-tag"></i> Photography | Portrait <i class="icon-comment-alt"></i> With 12 Comments
                     </div>
-                    <p>
-                    Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.Pie wafer wypas candy canes toffee. Cookie icing candy jelly oat cake chupa chups bear claw.
-                    </p>
+                    <P>there r so many things 
+Things happening i know this is my destiny</p>
                   </div>
   
                 </div>
@@ -200,9 +199,8 @@
                     <div class="blue-dark">
                     <i class="icon-user"></i> By Admin <i class="icon-tag"></i> Photography | Portrait <i class="icon-comment-alt"></i> With 12 Comments
                     </div>
-                    <p>
-                      Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.Pie wafer wypas candy canes toffee. Cookie icing candy jelly oat cake chupa chups bear claw.
-                    </p>
+                    <P>there r so many things 
+Things happening i know this is my destiny</p>
                   </div>
   
                 </div>
