--- a/blog.htm
+++ b/blog.htm
@@ -141,9 +141,8 @@
                       <div class="blue-dark">
                       <i class="icon-user"></i> By Admin <i class="icon-tag"></i> Photography | Portrait <i class="icon-comment-alt"></i> With 12 Comments
                       </div>
-                      <p>
-                      Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.Pie wafer wypas candy canes toffee. Cookie icing candy jelly oat cake chupa chups bear claw.
-                      </p>
+                      <P>there r so many things 
+Things happening i know this is my destiny</p>
                     </div>
           
                   </div>
@@ -286,8 +285,9 @@ Things happening i know this is my destiny</p>
             </div>
 
             <h3>Text Widget</h3>
-            Amet, consectetur adipisicing elit, sedure doriatlor in fugiat nulla  deserunt mollit anim id est laborum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit orn.
-                       
+            there r so many things 
+Things happening i know this is my destiny
+I was in depression when I called him and he showed up
           <div class="row space50"></div>  
         </div>
       </div>
