--- a/about-us.htm
+++ b/about-us.htm
@@ -293,8 +293,8 @@ Our skills include </li>
             <div class="span4">
               <h3>Client Says</h3> 
               <div class="client-says">            
-                “Claritas est etiam processus dynamicus, qui sur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas. Aliquam at erat in purus aliquet mollis. Fusce elementum velit vel dolor iaculis egestas. posuere vel vitae  elementum velit nibh.”
-              </div>
+                A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning and he said he will need to give feedback on how things go</div>
               <div class="client-says-2">
                 <div class="quotes">
                   <i class="icon-quote-right"></i>John Doe, Everton Inc.
