--- a/blog-detail.htm
+++ b/blog-detail.htm
@@ -275,8 +275,9 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning</
             </div>
 
             <h3>Text Widget</h3>
-            Amet, consectetur adipisicing elit, sedure doriatlor in fugiat nulla  deserunt mollit anim id est laborum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit orn.
-
+              A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+Text widget is getting too much and it needs to reduce the load of things
             <div class="row space30"></div>
                         
           <div class="row space50"></div>  
