--- a/index.htm
+++ b/index.htm
@@ -134,8 +134,8 @@ A guy in BCH  told me the class has been cancelled for this morning</div>
               <div class="ic-1"><i class="icon-resize-small"></i></div>
               <div class="title-1"><h4>Fully responsive</h4></div>
               <div class="text-1">         
-                Iil utilise un dictionnaire de plus de 200 mots kan rlarem as Ipsumtiotins, en combiake apple pie. Gingerbread icing ice cream applicake wafenaison.
-              </div>
+                 A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning</div>
             </div>
             <div class="span4">
               <div class="ic-1"><i class="icon-eye-open"></i></div>
