--- a/components.htm
+++ b/components.htm
@@ -445,8 +445,8 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning
               <div class="ic-1"><i class="icon-resize-small"></i></div>
               <div class="title-1"><h4>Fully responsive</h4></div>
               <div class="text-1">         
-                Iil utilise un dictionnaire de plus de 200 mots kan rlarem as Ipsumtiotins, en combiake apple pie. Gingerbread icing ice cream applicake wafenaison.
-              </div>
+                  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+A guy in BCH (my Roomie) told me the class has been cancelled for this morning and said that it is good to do good</div>
             </div>
             <div class="span4">
               <div class="ic-1"><i class="icon-eye-open"></i></div>
