--- a/components.htm
+++ b/components.htm
@@ -370,8 +370,8 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning</
                   </div>
                   <div id="collapseTwo" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+                      <p>  A guy in  told me the class has been cancelled for this morning.
+A guy in  told me the class has been cancelled for this morning</p>
 </div>
                   </div>
                 </div>
@@ -383,8 +383,8 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning</
                   </div>
                   <div id="collapseThree" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+                      <p>  A guy told me the class has been cancelled for this morning.
+A guy told me the class has been cancelled for this morning.</p>
 </div>
                   </div>
                 </div>
@@ -404,13 +404,13 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning</
               <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                   <h3>I'm in Section 1</h3>
-                  <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+                  <p>  a boy  told me the class has been cancelled for this morning.
+A boy told me the class has been cancelled for this morning.</p>
 </div>
                 <div class="tab-pane" id="tab2">
                   <h3>I'm in Section 2</h3>
-                  <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning</p>
+                  <p>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning.
+A guy told me the class has been cancelled for this morning</p>
 </div>
                 <div class="tab-pane" id="tab3">
                   <h3>I'm in Section 3</h3>
@@ -452,7 +452,7 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning a
               <div class="ic-1"><i class="icon-eye-open"></i></div>
               <div class="title-1"><h4>Retina Ready</h4></div>
               <div class="text-1">
-                 A guy in BCH (my Roomie) told me the class has been cancelled for this morning
+                 A sister told me the class has been cancelled for this morning
 A guy in BCH (my Roomie) told me the class has been cancelled for this morning</div>
             </div>    
           </div> 
@@ -575,9 +575,9 @@ A guy in BCH (my Roomie) told me the class has been cancelled for this morning</
               <h3>List</h3>
               <ul class="list-a">
                <li> A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning  </li>
-<li>  A guy in BCH (my Roomie) told me the class has been cancelled for this morning
-A guy in BCH (my Roomie) told me the class has been cancelled for this morning</li>
+A guy in ) told me the class has been cancelled for this morning  </li>
+<li>  A guy in my Room told me the class has been cancelled for this morning
+A guy in  (my Roomie) told me the class has been cancelled for this morning</li>
               </ul>   
             </div>
    
